<?xml version="1.0" encoding="utf-8"?>

<!--
    IoT Manager Android Client (master)
    Copyright (C) 2017  Luca Calderoni, Antonio Magnani,
    University of Bologna

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU Lesser General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU Lesser General Public License for more details.

    You should have received a copy of the GNU Lesser General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<resources>
    <!--Ristretta Android - Smart City Lab-->
    <string name="google_android_map_api_key">AIzaSyA6Gh7-MVdPJoB8TALdWdI02fe-LXogSUc</string>

    <string name="logo_description">IoT Manager</string>
    <string name="app_name">IoT Manager</string>
    <string name="app_description">IoT Manager</string>

    <string name="icon_alternative">Smart Icon</string>

    <string name="menu_refresh">Update</string>
    <string name="menu_settings">Settings</string>

    <string name="gps_search">Ricerca di GPS o rete &#8230;</string>
    <string name="network_unavailable">Connessione non disponibile.</string>
    <string name="network_required">Connessione necessaria.</string>
    <string name="network_dialog">Questa applicazione necessita di una connessione di rete. Abilita una connessione mobile o Wi-Fi.</string>
    <string name="network_dialog_cancel_button">Annulla</string>
    <string name="network_dialog_mobile_button">Mobile settings</string>
    <string name="network_dialog_wifi_button">WiFi Settings</string>
    <string name="db_download">Scaricamento dati:</string>
    <string name="list_updated">Lista aggiornata.</string>
    <string name="permission_denied_dialog">L\'utente non ha acconsentito all\'utilizzo di GPS o rete.</string>

    <string name="settings_auth">Autenticazione</string>
    <string name="settings_login">Log in</string>
    <string name="settings_login_info">Log in sul server per scaricare i dati.</string>
    <string name="settings_user">Username</string>
    <string name="settings_user_info">Nome utente per l\'autenticazione.</string>
    <string name="settings_pwd">Password</string>
    <string name="settings_pwd_info">Password per l\'autenticazione.</string>
    <string name="settings_profile">Preferenze</string>
    <string name="settings_range">Raggio d\'azione</string>
    <string name="settings_range_info">Il raggio per la ricerca di oggetti attorno a te.</string>
    <string name="settings_categories">Categorie</string>
    <string name="settings_categories_info">Le tipologie di oggetti che vuoi visualizzare.</string>
    <string name="settings_cities">Città</string>
    <string name="settings_cities_info">Sostituisce la tua posizione attuale con le coordinate della città indicata.</string>

</resources>